Adjust heading letter spacing on large screen to prevent some odd wrapping

--- a/css/default.css
+++ b/css/default.css
@@ -666,6 +666,7 @@ ul {
 	.productivity-heading {
 		text-align: left;
 		font-size: 2.5rem;
+		letter-spacing: -0.01em;
 	}
 
 	.productivity-context > p {
